@@ -7,6 +7,8 @@ o Added copyFile() which safely copies a file by copying to a
   temporary file, which is then renamed.
 o Added isEof() for connections to test for "End of File".
 o Added reassignInPackage().
+o Added dataFrame(), which allocated a data frame of given size
+  and column classes.
 o BUG FIX: writeRaw() of MultiVerbose returned a list of logicals.  
   Now it returns TRUE (invisibly).
 
